website: update translations

--- a/website/langs/de.json
+++ b/website/langs/de.json
@@ -258,16 +258,16 @@
     "docs-dropdown-14": "SimpleX für geschäftliche Anwendungen",
     "about-and-contact-us": "Über uns & Kontakt",
     "directory": "Verzeichnis",
-    "index-hero-h1": "Sei frei",
+    "index-hero-h1": "Sei<br>frei",
     "index-hero-h2": "Freiheit & Sicherheit<br>Ihrer Kommunikation",
     "index-hero-p1": "Das erste Netzwerk, in dem Sie Ihre Identität, Kontakte und Gruppen besitzen.",
     "index-hero-download-desktop-btn-title": "Download der SimpleX Desktop-App",
-    "index-google-play-title": "Öffentlicher iOS-Preview auf TestFlight",
+    "index-testflight-title": "Öffentlicher iOS-Preview auf TestFlight",
     "index-f-droid-title": "SimpleX F-Droid-Repository",
     "index-security-assessment-title": "Security-Gutachten",
     "index-security-review-2022-title": "Security-Überprüfung 2022",
     "index-security-review-2024-title": "Security-Überprüfung 2024",
-    "index-security-audits-label": "Security-Audits",
+    "index-security-audits-label": "Security-<br>Audits",
     "index-publications-privacy-guides-title": "Empfehlungen für Messenger",
     "index-publications-whonix-title": "Whonix - Empfehlungen für Messenger",
     "index-publications-heise-title": "Veröffentlichung",
