--- a/website/langs/es.json
+++ b/website/langs/es.json
@@ -258,21 +258,21 @@
     "hero-overlay-card-3-p-3": "Trail of Bits ha revisado el diseño criptográfico de los protocolos de red SimpleX en julio del 2024. <a href=\"/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html\">Saber más</a>.",
     "directory": "Directorio",
     "about-and-contact-us": "Acerca de & Contacta con nosotros",
-    "index-hero-h1": "Sea Libre",
+    "index-hero-h1": "Sea<br>Libre",
     "index-hero-h2": "Libertad y Seguridad<br>en Tus Comunicaciones",
     "index-hero-p1": "La primera red donde su identidad, contactos y grupos le pertenecen.",
     "index-hero-download-desktop-btn-title": "Descargar SimpleX Desktop App",
-    "index-google-play-title": "Vista previa pública de iOS en TestFlight",
+    "index-testflight-title": "Vista previa pública de iOS en TestFlight",
     "index-f-droid-title": "Repositorio SimpleX F-Droid",
-    "index-security-assessment-title": "evaluación de seguridad",
+    "index-security-assessment-title": "Evaluación de seguridad",
     "index-security-review-2022-title": "Revisión de Seguridad 2022",
     "index-security-review-2024-title": "Revisión de Seguridad 2024",
-    "index-security-audits-label": "Auditorías de Seguridad",
-    "index-publications-privacy-guides-title": "recomendaciones de mensajería",
-    "index-publications-whonix-title": "recomendación de mensajería de Whonix",
-    "index-publications-heise-title": "publicación",
-    "index-publications-kuketz-title": "revisión",
-    "index-publications-optout-title": "entrevista en podcast",
+    "index-security-audits-label": "Auditorías de<br>Seguridad",
+    "index-publications-privacy-guides-title": "Recomendaciones de mensajería",
+    "index-publications-whonix-title": "Recomendación de mensajería de Whonix",
+    "index-publications-heise-title": "Publicación",
+    "index-publications-kuketz-title": "Revisión",
+    "index-publications-optout-title": "Entrevista en podcast",
     "worlds-most-secure-messaging": "La Mensajería Más Segura del Mundo",
     "index-messaging-p1": "Le mensajería SimpleX dispone de cifrado de extremo a extremo de vanguardia.",
     "index-messaging-p2": "Por su seguridad y privacidad los servidores no pueden ver sus mensajes <span>ni con quién habla.</span>",
