--- a/website/langs/hu.json
+++ b/website/langs/hu.json
@@ -258,16 +258,16 @@
     "docs-dropdown-14": "SimpleX üzleti célra",
     "directory": "Csoportjegyzék",
     "about-and-contact-us": "Névjegy és kapcsolat",
-    "index-hero-h1": "Legyen szabad",
+    "index-hero-h1": "<div class=\"medium\">Legyen<br>szabad</div>",
     "index-hero-p1": "Az első olyan hálózat, ahol Ön a tulajdonosa saját identitásának, partnereinek és csoportjainak.",
     "index-hero-download-desktop-btn-title": "SimpleX számítógépes alkalmazásának letöltése",
     "index-security-assessment-title": "biztonsági felmérés",
     "index-security-review-2022-title": "Biztonsági audit 2022",
     "index-security-review-2024-title": "Biztonsági audit 2024",
-    "index-security-audits-label": "Biztonsági auditok",
+    "index-security-audits-label": "Biztonsági<br>auditok",
     "index-publications-heise-title": "kiadvány",
     "index-hero-h2": "Az Ön kommunikációjának<br>szabadsága és biztonsága",
-    "index-google-play-title": "Nyilvános betekintés az iOS alkalmazás fejlesztésébe a TestFlighton",
+    "index-testflight-title": "Nyilvános betekintés az iOS alkalmazás fejlesztésébe a TestFlighton",
     "index-f-droid-title": "SimpleX F-Droid-tároló",
     "index-publications-privacy-guides-title": "ajánlások",
     "index-publications-whonix-title": "Whonix ajánlás",
