--- a/website/langs/id.json
+++ b/website/langs/id.json
@@ -262,12 +262,12 @@
     "index-hero-h2": "Kebebasan & Keamanan<br>Komunikasi Anda",
     "index-hero-p1": "Jaringan pertama tempat Anda memiliki identitas, kontak, dan grup Anda.",
     "index-hero-download-desktop-btn-title": "Unduh Aplikasi Desktop SimpleX",
-    "index-google-play-title": "Pratinjau iOS publik di TestFlight",
+    "index-testflight-title": "Pratinjau iOS publik di TestFlight",
     "index-f-droid-title": "Repositori SimpleX F-Droid",
     "index-security-assessment-title": "penilaian keamanan",
     "index-security-review-2022-title": "Tinjauan Keamanan 2022",
     "index-security-review-2024-title": "Tinjauan Keamanan 2024",
-    "index-security-audits-label": "Audit Keamanan",
+    "index-security-audits-label": "Audit<br>Keamanan",
     "index-publications-privacy-guides-title": "rekomendasi perpesanan",
     "index-publications-whonix-title": "Rekomendasi perpesanan Whonix",
     "index-publications-heise-title": "publikasi",
