--- a/website/langs/it.json
+++ b/website/langs/it.json
@@ -261,13 +261,13 @@
     "index-hero-h2": "Libertà e sicurezza<br>delle tue comunicazioni",
     "index-hero-p1": "La prima rete in cui possiedi la tua identità, i contatti e i gruppi.",
     "index-hero-download-desktop-btn-title": "Scarica l'app desktop di SimpleX",
-    "index-google-play-title": "Anteprima pubblica per iOS su TestFlight",
+    "index-testflight-title": "Anteprima pubblica per iOS su TestFlight",
     "index-f-droid-title": "Repository F-Droid di SimpleX",
     "index-security-assessment-title": "valutazione della sicurezza",
     "index-security-review-2022-title": "Revisione della sicurezza 2022",
     "index-security-review-2024-title": "Revisione della sicurezza 2024",
-    "index-hero-h1": "Sii libero",
-    "index-security-audits-label": "Analisi della sicurezza",
+    "index-hero-h1": "Sii<br>libero",
+    "index-security-audits-label": "Analisi della<br>sicurezza",
     "index-publications-privacy-guides-title": "consigli sulla messaggistica",
     "index-publications-whonix-title": "consigli sulla messaggistica di Whonix",
     "index-publications-heise-title": "pubblicazione",
