--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -258,53 +258,54 @@
     "docs-dropdown-12": "Безопасность",
     "docs-dropdown-11": "Часто задаваемые вопросы",
     "docs-dropdown-14": "SimpleX для бизнеса",
+    "index-hero-h1": "<div class=\"small\">Жить<br>Свободно</div>",
     "index-hero-h2": "Свобода и Безопасность<br>Ваших Коммуникаций",
     "index-hero-p1": "Первая сеть, в которой Вам принадлежат Ваши данные, контакты и группы.",
     "index-hero-download-desktop-btn-title": "Загрузить приложение SimpleX для компьютера",
-    "index-google-play-title": "Бета-релиз для iOS на TestFlight",
+    "index-testflight-title": "Бета-релиз для iOS на TestFlight",
     "index-f-droid-title": "Загрузить через F-Droid",
     "index-security-assessment-title": "Аудиты безопасности",
     "index-security-review-2022-title": "Аудит безопасности в 2022",
     "index-security-review-2024-title": "Аудит безопасности в 2024",
-    "index-security-audits-label": "Аудиты безопасности",
-    "index-publications-privacy-guides-title": "Рекомендации мессенджеров",
+    "index-security-audits-label": "Аудиты<br>безопасности",
+    "index-publications-privacy-guides-title": "Рекомендации мессенджеров Privacy Guides",
     "index-publications-whonix-title": "Рекомендации мессенджеров от Whonix",
-    "index-publications-heise-title": "Публикация",
-    "index-publications-kuketz-title": "Обзор",
-    "index-publications-optout-title": "Подкаст интервью",
+    "index-publications-heise-title": "Публикации Heise Online",
+    "index-publications-kuketz-title": "Обзор от Mike Kuketz",
+    "index-publications-optout-title": "OptOut подкаст интервью",
     "worlds-most-secure-messaging": "Самый Безопасный Мессенджер в Мире",
     "index-messaging-p1": "Сообщения в SimpleX имеют самое передовое сквозное шифрование (end-to-end).",
-    "index-messaging-p2": "Для Вашей безопасности и конфиденциальности, серверы не могут видеть ваши сообщения <span>и с кем Вы разговариваете</span>.",
+    "index-messaging-p2": "Для Вашей безопасности, серверы не могут видеть ваши сообщения <span>и с кем Вы разговариваете</span>.",
     "index-messaging-cta": "Узнать больше про сообщения в SimpleX",
-    "index-nextweb-h2": "Вам Принадлежит<br>Следующий Веб",
-    "index-nextweb-p1": "SimpleX был основан на убеждении что <span>Вы должны быть владельцем Ваших данных, контактов и групп</span>.",
-    "index-nextweb-p2": "Открытая и децентрализованная сеть позволяет Вам соединяться с другим людьми и делиться идеями свободно и безопасно.",
-    "index-token-h2": "Независимые Группы",
+    "index-nextweb-h2": "Ваш Интернет Будущего",
+    "index-nextweb-p1": "SimpleX основан на идее что <span>Ваши данные, контакты и группы должны принадлежать Вам</span>.",
+    "index-nextweb-p2": "Открытая децентрализованная сеть позволяет Вам соединяться с другими людьми и общаться свободно и безопасно.",
+    "index-token-h2": "Стабильные Сообщества",
     "index-token-p1": "Вы сможете поддерживать Ваши любимые группы с помощью будущих Ваучеров Групп.",
-    "index-token-p2": "Ваучеры будут использоваться для оплаты за серверы, чтобы Ваши группы оставались свободными и независимыми.",
+    "index-token-p2": "Ваучеры будут использоваться для оплаты за серверы, чтобы группы оставались свободными и независимыми.",
     "index-token-cta": "Узнайте больше и <strong> возьмите Ваш бесплатный NFT</strong>, чтобы получить скидку 20% на SimpleX токены!",
-    "index-roadmap-h2": "SimpleX План для Свободного Интернета",
+    "index-roadmap-h2": "Путь Сети SimpleX к Свободному Интернету",
     "index-roadmap-2025": "2025",
     "index-roadmap-2025-title": "Большие каналы и группы",
-    "index-roadmap-2025-desc": "Уйти с централизованных платформ",
+    "index-roadmap-2025-desc": "Чтобы Вы могли покинуть централизованные платформы",
     "index-roadmap-2026": "2026",
     "index-roadmap-2026-title": "Самодостаточные группы и серверы",
     "index-roadmap-2026-desc": "Запуск Ваучеров Групп",
     "index-roadmap-2027": "2027",
     "index-roadmap-2027-title": "Поддержка роста Ваших групп",
-    "index-roadmap-2027-desc": "Инструменты для продвижения Ваших групп",
-    "index-directory-h2": "Вступите в Группы SimpleX",
+    "index-roadmap-2027-desc": "Инструменты для продвижения групп",
+    "index-directory-h2": "Вступайте в Группы SimpleX",
     "index-directory-p1": "Сотни тысяч людей уже доверяют мессенджеру SimpleX.",
     "index-directory-p2": "Найдите группы по душе в каталоге SimpleX и создайте свои!",
     "index-directory-cta": "Открыть каталог SimpleX",
     "index-directory-users-group-title": "Группа пользователей SimpleX",
     "how-secure-comparison-title": "Сравнение безопасности сквозного шифрования в мессенджерах",
-    "how-secure-message-padding": "Message padding",
-    "how-secure-repudiation-deniability": "Repudiation (deniability)",
-    "how-secure-forward-secrecy": "Forward secrecy",
-    "how-secure-break-in-recovery": "Post-compromise security",
-    "how-secure-two-factor-key-exchange": "2-factor key exchange",
-    "how-secure-post-quantum-hybrid-crypto": "Post-quantum hybrid crypto",
+    "how-secure-message-padding": "Дополнение сообщений",
+    "how-secure-repudiation-deniability": "Отрицаемые сообщения",
+    "how-secure-forward-secrecy": "Прямая секретность",
+    "how-secure-break-in-recovery": "Безопасность после взлома",
+    "how-secure-two-factor-key-exchange": "2-факторный обмен ключами",
+    "how-secure-post-quantum-hybrid-crypto": "Гибридное постквантовое шифрование",
     "messengers-comparison-section-list-point-1": "Briar дополняет сообщения до размера кратного 1024 байтов, Signal - до кратного 160 байтов.",
     "messengers-comparison-section-list-point-2": "Отрицаемость сообщений не включает в себя соединеие между клиентом и сервером.",
     "messengers-comparison-section-list-point-3": "По всей видимости, использование криптографической подписи исключает отражаемость, но это требует уточнения.",
