--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -283,7 +283,7 @@
     "index-token-h2": "Communities That Last",
     "index-token-p1": "You will support your favorite groups with future Community Vouchers.",
     "index-token-p2": "Vouchers will pay for servers, to let your communities stay free and independent.",
-    "index-token-cta": "Learn more and <strong>get your free NFT</strong><br>for 20% discount on SimpleX Token!",
+    "index-token-cta": "Learn more and <strong>get your free NFT</strong><br>for early testing.",
     "index-roadmap-h2": "SimpleX Roadmap to Free Internet",
     "index-roadmap-2025": "2025",
     "index-roadmap-2025-title": "Scale to Large Communities",
