--- a/website/langs/cs.json
+++ b/website/langs/cs.json
@@ -25,7 +25,7 @@
     "smp-protocol": "SMP protokol",
     "chat-protocol": "Chat protokol",
     "donate": "Darovat",
-    "copyright-label": "© 2020-2025 SimpleX | Projekt s otevřeným zdrojovým kódem",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Projekt s otevřeným zdrojovým kódem",
     "simplex-chat-protocol": "SimpleX Chat protokol",
     "terminal-cli": "Terminálové rozhraní příkazového řádku",
     "terms-and-privacy-policy": "Ochrana soukromí",
