--- a/website/langs/fi.json
+++ b/website/langs/fi.json
@@ -112,7 +112,7 @@
     "simplex-explained-tab-1-p-1": "Voit luoda yhteyshenkilöitä ja ryhmiä sekä käydä kaksisuuntaisia keskusteluja kuten missä tahansa muussa viestisovelluksessa.",
     "simplex-explained-tab-3-p-1": "Palvelimilla on erilliset anonyymit tunnistetiedot kullekin jonolle, eivätkä ne tiedä, mille käyttäjille ne kuuluvat.",
     "donate": "Lahjoita",
-    "copyright-label": "© 2020-2025 SimpleX | Avoin projekti",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Avoin projekti",
     "hero-p-1": "Muissa sovelluksissa on käyttäjätunnuksia: Signal, Matrix, Session, Briar, Jami, Cwtch, jne.<br> SimpleX ei käytä niitä, <strong>ei edes satunnaisia numeroita</strong>.<br> Tämä parantaa yksityisyyttäsi radikaalisti.",
     "simplex-private-1-title": "2 kerrosta päästä päähän salattua viestintää",
     "simplex-private-2-title": "Lisäkerros palvelimen salaukselle",
