--- a/website/langs/he.json
+++ b/website/langs/he.json
@@ -53,7 +53,7 @@
     "smp-protocol": "פרוטוקול SMP",
     "chat-protocol": "פרוטוקול צ'אט",
     "donate": "תרומה",
-    "copyright-label": "© 2020-2025 SimpleX | פרויקט קוד פתוח",
+    "copyright-label": "© 2020-2025 SimpleX Chat | פרויקט קוד פתוח",
     "hero-p-1": "לאפליקציות אחרות יש מזהי משתמש: Signal, Matrix, Session, Briar, Jami, Cwtch וכו'.<br> ל-SimpleX אין, <strong>אפילו לא מספרים אקראיים</strong>.<br> זה משפר באופן קיצוני את הפרטיות שלך.",
     "hero-overlay-2-title": "מדוע מזהי משתמש מזיקים לפרטיות?",
     "feature-6-title": "שיחות שמע ווידאו<br>מוצפנות מקצה לקצה",
