--- a/website/langs/id.json
+++ b/website/langs/id.json
@@ -30,7 +30,7 @@
     "simplex-explained-tab-2-text": "2. Bagaimana cara kerjanya",
     "simplex-chat-protocol": "Protokol SimpleX Chat",
     "hero-overlay-2-title": "Mengapa ID pengguna buruk untuk privasi?",
-    "copyright-label": "© 2020-2025 SimpleX | Open-Source Project",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Open-Source Project",
     "simplex-explained-tab-3-text": "3. Apa yang dilihat server",
     "smp-protocol": "Protokol SMP",
     "please-use-link-in-mobile-app": "Mohon gunakan tautan di aplikasi seluler",
