--- a/website/langs/nl.json
+++ b/website/langs/nl.json
@@ -17,7 +17,7 @@
     "chat-bot-example": "Chatbot voorbeeld",
     "smp-protocol": "SMP protocol",
     "donate": "Doneer",
-    "copyright-label": "© 2020-2025 SimpleX | Open-sourceproject",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Open-sourceproject",
     "simplex-chat-protocol": "SimpleX Chat protocol",
     "terminal-cli": "Terminal CLI",
     "terms-and-privacy-policy": "Privacybeleid",
