--- a/website/langs/ro.json
+++ b/website/langs/ro.json
@@ -20,7 +20,7 @@
     "smp-protocol": "Protocolul SMP",
     "chat-protocol": "Protocol de chat",
     "donate": "Donează",
-    "copyright-label": "© 2020-2025 SimpleX | Proiect Open-Source",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Proiect Open-Source",
     "simplex-chat-protocol": "Protocolul SimpleX Chat",
     "terminal-cli": "Terminal CLI",
     "terms-and-privacy-policy": "Politică de confidențialitate",
