--- a/website/langs/tr.json
+++ b/website/langs/tr.json
@@ -21,7 +21,7 @@
     "smp-protocol": "SMP Protokolü",
     "chat-protocol": "Sohbet Protokolü",
     "donate": "Bağış Yap",
-    "copyright-label": "© 2020-2025 SimpleX | Açık Kaynak Projesi",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Açık Kaynak Projesi",
     "simplex-chat-protocol": "SimpleX Sohbet Protokolü",
     "terminal-cli": "Terminal Komut Satırı Arayüzü",
     "terms-and-privacy-policy": "Gizlilik Politikası",
