--- a/website/langs/bg.json
+++ b/website/langs/bg.json
@@ -21,7 +21,7 @@
     "smp-protocol": "СМП Протокол",
     "chat-protocol": "Чат протокол",
     "donate": "Дарете",
-    "copyright-label": "© 2020-2025 SimpleX | Проект с отворен код",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Проект с отворен код",
     "simplex-chat-protocol": "SimpleX Чат протокол",
     "terminal-cli": "Системна конзола",
     "terms-and-privacy-policy": "Политика за поверителност",
