--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -22,7 +22,7 @@
     "smp-protocol": "SMP protocol",
     "chat-protocol": "Chat protocol",
     "donate": "Donate",
-    "copyright-label": "© 2020-2025 SimpleX | Open-Source Project",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Open-Source Project",
     "simplex-chat-protocol": "SimpleX Chat protocol",
     "terminal-cli": "Terminal CLI",
     "about-and-contact-us": "About & Contact us",
