--- a/website/langs/hu.json
+++ b/website/langs/hu.json
@@ -20,7 +20,7 @@
     "smp-protocol": "SMP-protokoll",
     "chat-protocol": "Csevegési protokoll",
     "donate": "Adományozás",
-    "copyright-label": "© 2020-2025 SimpleX | Nyílt forráskódú projekt",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Nyílt forráskódú projekt",
     "simplex-chat-protocol": "A SimpleX Chat protokoll",
     "terminal-cli": "Terminál CLI",
     "terms-and-privacy-policy": "Adatvédelmi irányelvek",
