--- a/website/langs/pl.json
+++ b/website/langs/pl.json
@@ -15,7 +15,7 @@
     "smp-protocol": "Protokół SMP",
     "chat-protocol": "Protokół czatu",
     "donate": "Darowizna",
-    "copyright-label": "© 2020-2025 SimpleX | Projekt Open-Source",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Projekt Open-Source",
     "simplex-chat-protocol": "Protokół SimpleX Chat",
     "terminal-cli": "Terminal CLI",
     "terms-and-privacy-policy": "Polityka prywatności",
