--- a/website/langs/pt_BR.json
+++ b/website/langs/pt_BR.json
@@ -25,7 +25,7 @@
     "smp-protocol": "Protocolo SMP",
     "chat-protocol": "Protocolo de bate-papo",
     "donate": "Doar",
-    "copyright-label": "© 2020-2025 SimpleX | Projeto de Código Livre",
+    "copyright-label": "© 2020-2025 SimpleX Chat | Projeto de Código Livre",
     "simplex-chat-protocol": "Protocolo Chat SimpleX",
     "terminal-cli": "CLI Terminal",
     "hero-header": "Privacidade redefinida",
