website: layout fixes, token button

--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -5,6 +5,7 @@
     "reference": "Reference",
     "blog": "Blog",
     "features": "Features",
+    "navbar-token": "Token",
     "why-simplex": "Why SimpleX",
     "simplex-privacy": "SimpleX privacy",
     "simplex-network": "SimpleX network",
